--- a/app/src/main/res/layout/activity_quiz_locker.xml
+++ b/app/src/main/res/layout/activity_quiz_locker.xml
@@ -60,10 +60,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:max="100"
+        android:maxHeight="4dp"
         android:paddingStart="0dp"
         android:paddingEnd="0dp"
         android:progress="50"
+        android:progressDrawable="@drawable/progress"
+        android:thumb="@drawable/slide"
         app:layout_constraintBottom_toBottomOf="@+id/leftImageView"
         app:layout_constraintEnd_toStartOf="@+id/rightImageView"
         app:layout_constraintStart_toEndOf="@+id/leftImageView"
